@@ -11,6 +11,7 @@ Current:
     - ATmega48P (patch #7629 add support for atmega48p)
     - AT90PWM316 (bug #21797: AT90PWM316: New part description)
     - ATxmega16D4, ATxmega32D4, ATxmega64D4, ATxmega128D4
+    - ATmega256RFR2, ATmega128RFR2, ATmega64RFR2
 
   * New programmers supported:
     - avrftdi
